Add controllers, swagger ui and refactor